--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "phantomjs": "^1.9.15"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start"
+    "test": "./node_modules/karma/bin/karma start",
+    "test-once": "npm run test -- --single-run"
   },
   "repository": {
     "type": "git",
