--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "async": "~0.9.2",
-    "lodash": "~3.1.0"
+    "lodash": "~3.1.0",
+    "hexo-test": "sscotth/hexo-test"
   }
 }
